# nlpashto

./: main.py  pyproject.toml  readme.md  trash.py
datasets/: word_segmentation.csv
nlpashto/: __init__.py  char_replace.py  dataset_utils.py  functions.py  helpers.py  pashto.py  pold.py  pos_tagger.sav  pos_tagging.py  sentiment_analysis.py  spelling_correction.py  tokenization.py  utils.py  word_segmentation.py
nlpashto.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
nlpashto/models/: pos_tagger.sav  segmenter.sav  tokenizer.pickle
src/nlpashto.egg-info/: PKG-INFO  SOURCES.txt
src/pashto.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
