[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nlpashto"
version = "0.0.15"
authors = [
  { name="Ijazul Haq", email="ijazse@hotmail.com" },
]
description = "Pashto Natural Language Processing Toolkit"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ijazul-haq/nlpashto"