[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nlpashto"
version = "0.0.23"
authors = [{ name="Ijazul Haq", email="ijazse@hotmail.com" }]
description = "Pashto Natural Language Processing Toolkit"
keywords = ["NLP", "Pashto", "NLPashto", "Pashto NLP", "NLP Toolkit", "Word Segmentation", "Tokenization", "POS Tagging", "Sentinemt Nalysis", "Text Classification", "Token Classification", "Sequence Tagging", "Text Cleaning"]
dependencies = [
    "transformers",
    "sklearn-crfsuite",
    "emoji",
    "joblib",
    "numpy",
    "pandas",
    "requests",
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ijazul-haq/nlpashto"